tests/expectations/compiler/interfaces/storage_missing_fail.out
Error [ECHI03712007]: Program `test` implements interface `test.aleo/StorageInterface` but is missing the required storage variable `counter`.
    --> compiler-test:5:1
     |
   5 | program test.aleo : StorageInterface {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   6 |     fn main() {}
     |     ^^^^^^^^^^^^
   7 | }
     | ^
     |
     = Add a storage variable definition with the specified name.
